Closed Bug 1732836 Opened 4 years ago Closed 4 years ago

When print scale is set to anything more than 100, the right side of text content is cut off

Categories

(Core :: Printing: Output, defect)

Firefox 92
defect

Tracking

()

VERIFIED FIXED
95 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- verified
firefox93 --- wontfix
firefox94 --- verified
firefox95 --- verified

People

(Reporter: tohea, Assigned: alaskanemily)

References

(Regression)

Details

(Keywords: regression)

Attachments

(3 files)

Attached image printissue.PNG

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/94.0.4606.61 Safari/537.36

Steps to reproduce:

Attempt to print any page at 150%

Actual results:

text getting cut off in print preview and in actual print

Expected results:

text should not be cut off

The Bugbug bot thinks this bug should belong to the 'Core::Printing: Output' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.

Component: Untriaged → Printing: Output
Product: Firefox → Core

Did something knock out the fix from bug 1720621 ? Because we do not need this problem back. :(

Hi tohea, if you have a high bandwidth connection, do you want to run a Mozregression (https://mozilla.github.io/mozregression/) and see whether you can pin down the change that caused this? If was introduced in the past 30 days, that hopefully shouldn't take too long.

I'm not sure how you would like this reported back but i went thropugh the mozregression process:

  • last bad build was 'autoland build: c69cd7ba'
  • last good build was 'autoland build: 495d29e4'

ironically, it mentions bug 1725486 in the log:
"Scaling currently doesn't work in print preview tests. This adds a test that
will begin to fail if scaling gets fixed, to tell us to enable the actual
scaled content test instead."

Also found bug 109565 which has a similar issue from many years ago

Please let me know if you would like any further information

Hmm, this looks a lot like like the fix for bug 1722890 might have broken other cases. I can look into the issue.

Flags: needinfo?(emcdonough)

This reverts the patch for bug 1720621.

This caused a conflict with the fix for bug 1722890, which fixed another case
of cutoff content when printing scaled. That fix should also cover the upscaled
case.

Assignee: nobody → emcdonough
Pushed by emcdonough@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/bc282ac8a14c Do not apply page scale twice when building display lists for paged content. r=mattwoodrow
Status: UNCONFIRMED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 95 Branch
See Also: → 1733411

To my inexperienced eye, this looks like it may be simple enough for uplift to beta, assuming no printing crisis ensues in coming days.

Actually, Print Preview inaccurately shows truncation in the header, and the footer pushed off the page, even with the correct output. Must be a different part of the code.

Yes, I do plan to flag this for beta uplift.

The header drawing logic is not directly connected to the code this patch changed. I can make a new bug about that, there are a number of funny little issues with headers/footers, but it would be nice to fix regardless.

Flags: needinfo?(emcdonough)

The header and footer issue appears to be reported in bug 1730091 already.

See Also: → 1730091
Regressed by: 1722890
Has Regression Range: --- → yes

Comment on attachment 9244436 [details]
Bug 1732836 - Do not apply page scale twice when building display lists for paged content.

Beta/Release Uplift Approval Request

  • User impact if declined: Printing with most scaling factors over 100% will result in cutoff content
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: Attempting to print any page at 150% will result in cutoff content on the right and bottom of the page without this patch.
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): The change is small and self-contained, and does not seem to cause further clipping issues.
  • String changes made/needed:
Attachment #9244436 - Flags: approval-mozilla-beta?
Flags: qe-verify+

it's ok now.
Thank you a lot.

QA Whiteboard: [qa-triaged]

Set release status flags based on info from the regressing bug 1722890

Comment on attachment 9244436 [details]
Bug 1732836 - Do not apply page scale twice when building display lists for paged content.

Approved for 94.0b8.

Attachment #9244436 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Hello,

Reproduced this issue on 94.0a1(2021-09-27) with Windows 11.

Confirming this issue as verified fixed on 94.0b8(20211019190240) and 95.0a1(20211019215100). Verified this using macOS 11.6, Windows 11 and Ubuntu 20.

Status: RESOLVED → VERIFIED
Flags: qe-verify+

Comment on attachment 9244436 [details]
Bug 1732836 - Do not apply page scale twice when building display lists for paged content.

ESR Uplift Approval Request

  • If this is not a sec:{high,crit} bug, please state case for ESR consideration: This bug is needed to fix a regression caused by bug 1722890.
  • User impact if declined: Content is cut off when printing is scaled to be over 100%
  • Fix Landed on Version: 94
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This is a relatively small change which has been tested and landed on Nightly/Release for some time.
  • String or UUID changes made by this patch:
Attachment #9244436 - Flags: approval-mozilla-esr91?

Comment on attachment 9244436 [details]
Bug 1732836 - Do not apply page scale twice when building display lists for paged content.

Needed for bug 1722890, approved for 91.5esr.

Attachment #9244436 - Flags: approval-mozilla-esr91? → approval-mozilla-esr91+
Flags: qe-verify+

Reproduced the issue on an affected Nightly build 94.0a1 from 2021-09-27 on Ubuntu 20.04.
The issue is no longer reproducible with 91.5.0esr (20220105212146) on Ubuntu 20.04., macOS 10.15 and Windows 10 x64.

Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: