Bug 1732836 - Do not apply page scale twice when building display lists for paged content. r=mattwoodrow, a=RyanVM

This reverts the patch for bug 1720621.

This caused a conflict with the fix for bug 1722890, which fixed another case
of cutoff content when printing scaled. That fix should also cover the upscaled
case.

Differential Revision: https://phabricator.services.mozilla.com/D127594