layout/generic/nsPageContentFrame.cpp
@@ -347,12 +347,6 @@ void nsPageContentFrame::BuildDisplayList(nsDisplayListBuilder* aBuilder,
       nsDisplayListBuilder::AutoPageNumberSetter p(aBuilder, pageNum);
       BuildPreviousPageOverflow(aBuilder, pageFrame, this, set);
     }
-
-    nsRect visible = aBuilder->GetVisibleRect();
-    visible.ScaleInverseRoundOut(PresContext()->GetPageScale());
-
-    nsDisplayListBuilder::AutoBuildingDisplayList buildingForChild(
-        aBuilder, this, visible, visible);
     mozilla::ViewportFrame::BuildDisplayList(aBuilder, set);
 
     set.SerializeWithCorrectZOrder(&content, GetContent());
